--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>jitsi-utils</artifactId>
+            <version>1.0-20190401.122850-7</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>libjitsi</artifactId>
             <version>1.0-20190327.162716-379</version>
         </dependency>
