Uses Version from jitsi-utils.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <url>https://github.com/jitsi/jitsi-stats</url>
 
     <properties>
-        <jitsi-desktop.version>2.13.2bc6ccf</jitsi-desktop.version>
+        <jitsi-desktop.version>2.13.1f9891e</jitsi-desktop.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -37,12 +37,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jitsi-utils</artifactId>
-            <version>1.0-20190401.122850-7</version>
+            <version>1.0-1-gaca0e20</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>libjitsi</artifactId>
-            <version>1.0-20190405.175243-382</version>
+            <version>1.0-0-gb3296cf</version>
         </dependency>
     </dependencies>
 
