--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,18 @@
         <dependency>
             <groupId>io.callstats</groupId>
             <artifactId>callstats-java-sdk</artifactId>
-            <version>5.0.0</version>
+            <version>5.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>4.3.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jxmpp/jxmpp-jid -->
+        <dependency>
+            <groupId>org.jxmpp</groupId>
+            <artifactId>jxmpp-jid</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <!-- org.jitsi -->
         <dependency>
