* feat: Updates callstats.io and sets site id. (#10)
* feat: Updates callstats.io and sets site id.

Expects bare jid of the room and extract from it the subdomain if any
and pass it as site id to callstats.

* Drops OSGi from dependencies.

* squash: Use the same jxmp version as the one shared from other components.

* squash: Uses EntityBareJid as conference jid.

* squash: Fixes comments and adds a README.md.

* squash: Fix string blank check.

--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,13 @@
         <dependency>
             <groupId>io.callstats</groupId>
             <artifactId>callstats-java-sdk</artifactId>
-            <version>5.0.0</version>
+            <version>5.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jxmpp/jxmpp-jid -->
         <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>4.3.1</version>
+            <groupId>org.jxmpp</groupId>
+            <artifactId>jxmpp-jid</artifactId>
+            <version>0.6.2</version>
         </dependency>
         <!-- org.jitsi -->
         <dependency>
